app/styles/main.css
html {
  height: 100%;
  margin: 0;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
}

body {
  height: inherit;
  display: flex;
}

video {
    background-color: #21252B;
}

#videoContainer {
  background-color: #282C34;
  flex: 3;
  position: relative;
}

.alert {
  height: 38px;
  line-height: 10px;
}

#controls {
  color: #95a5a6;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 300;
}

button {
  color: black;
}

input {
  color: black;
}

#tools {
  background-color: #21252B;
  flex: 1;
  overflow: scroll;
  height: 75vh;
}

#download {
  margin-left: 4px;
}

#alerts {
  margin-left: -6%;
  margin-top: 10px;
}

.peerVideoCont {
  position: relative;
  /*shirkwrap video and hangup button*/
  display: inline-block;
}

.peerVideo {
  z-index: 0;
  margin: 0px;
}

.hangup {
  position: absolute;
  z-index: 1;
}

#localMediaContainer {
  background-color: #21252B;
  /*anchor localMedia to bottom of screen*/
  position: fixed;
  bottom: 0;
  /*bound width of localMedia*/
  width: 25%;
}

.message {
  /*background-color: #f1c40f;
  opacity: .5;*/
  color: #95a5a6;
  min-height: 25px;
  width: 100%;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: 2px solid #95a5a6;

}

